# WebGPUAdventures

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  main.cpp  tests.cpp  utils.cmake  webgpu-utils.cpp  webgpu-utils.h
glfw/: CMakeLists.txt
glfw3webgpu/: glfw3webgpu.c
resources/: pyramid.txt  shader.wgsl  webgpu.txt
webgpu/Include/webgpu/: webgpu.hpp  wgpu.h
webgpu/include-emscripten/webgpu/: webgpu.hpp  wgpu.h
webgpu/include/webgpu/: webgpu.hpp
